2008-10-19  Murray Cumming  <murrayc@murrayc.com>

	=== Release 0.3.8 ===

2008-10-19  Mathias Hasselmann  <mathias@taschenorakel.de>

	Provide a default value for DBUS_SYSTEM_BUS_ADDRESS.

	* tests/test-runner.sh: See above.

2008-10-19  Mathias Hasselmann  <mathias@taschenorakel.de>

	Use different service ports for dispatchers since new Avahi only
	report local collisions under that condition. Might be a bug in Avahi.

	* tests/test-dispatcher-local-collision.c (main()):
	  Use port 2008 for dispatcher2.

2008-10-19  Mathias Hasselmann  <mathias@taschenorakel.de>

	Don't expect Avahi to announce services on interfaces named "*:avahi".

	* tests/framework.c (epc_test_list_ifaces()):
	  Ignore interfaces with ":avahi" suffix.

2008-10-19  Mathias Hasselmann  <mathias@openismus.com>

	Remove redundant epc_gettext() function.

	* Makefile.am:
	* libepc/i18n.c:
	* libepc/i18n.h:
	  Remove libepc/i18n.[ch].

	* libepc/consumer.c:
	* libepc/publisher.c:
	* libepc/tls.c:
	* libepc-ui/password-dialog.c:
	* libepc-ui/progress-window.c:
	* libepc/shell.c (epc_shell_init()):
	  Include <glib/gi18n-lib.h> instead of "libepc/i18n.h".
	  Bind localedir in epc_shell_init() instead of epc_gettext().

2008-10-19  Murray Cumming  <murrayc@murrayc.com>

	=== Release 0.3.7 ===

2008-10-19  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Specify LIBEPC_LIBS for the examples, 
	because not all (such as gthread-2.0) are implicitly provided 
	by the build library.
	Bug #556689 (Götz Waschk).

2008-10-17  Murray Cumming  <murrayc@murrayc.com>

	=== Release 0.3.6 ===

2008-10-17  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac: Really increase the version.

2008-09-21  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac: add missing gthread module check to fix build.
	Bug #553181.

2008-07-29  Murray Cumming  <murrayc@murrayc.com>

	* libepc/publisher.c: epc_publisher_install_handlers(): Check for 
	a NULL service_name before calling soup_auth_domain_digest_new() to 