@@ -1,3 +1,9 @@
+2008-10-23  Mathias Hasselmann  <mathias@taschenorakel.de>
+
+	Get default address of system DBus from pkg-config.
+
+	* tests/test-runner.sh: See above.
+
 2008-10-19  Murray Cumming  <murrayc@murrayc.com>
 
 	=== Release 0.3.8 ===
